kserve/sample-full-aims-deployment/http-route-aim-llama-3.1-8b-instruct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aim-llama-3-1-8b-instruct
spec:
  parentRefs:
  - name: kserve-gateway
    namespace: kgateway-system
    sectionName: http
  rules:
  - backendRefs:
    - name: aim-llama-3-1-8b-instruct-predictor
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /aim-llama-3-1-8b-instruct
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
